# pruerbas_2

./: LICENSE.txt  README.md  ai-log.md  ballenas.csv  ballenas.xls  custom.scss  lobos_marinos.xls  main.py  metadatos_ballenas.md  metadatos_prod_pesquera.md  pelicanos.csv  produccion_pesquera.csv  produccion_pesquera_original.xlsx  pyproject.toml  seccion_4_actualizada.qmd  seccion_4_limpia.qmd
.github/workflows/: publish.yml
dashboard/: _quarto.yml  analisis.qmd  custom (2).scss (1).txt  custom.scss  escenarios.qmd  estilos.css  gemini-code-1776891968245.txt  index (4).qmd  index.qmd  index.qmd (12).txt  index.quarto_ipynb_1  introduccion.qmd  modelo.qmd  tablero_maestro.qmd
dashboard/.quarto/idx/: analisis.qmd.json  conclusiones.qmd.json  escenarios.qmd.json  index.qmd.json  index_original.qmd.json  introduccion.qmd.json  modelo.qmd.json
dashboard/.quarto/project-cache/: deno-kv-file
dashboard/.quarto/quarto-session-temp43c4ca22b7d46291/: 45851927589710ff  9b42f8675658d17a
dashboard/.quarto/quarto-session-temp4e21c07a086b726/: b1a87ca261b5628f-c4273b3cb26ddf8117da52fd933cb1f4.css
dashboard/.quarto/quarto-session-temp70c13cf43bac1267/: 1609b9c7cc1bd9b2.scss
datos/ballenas/: ballenas.csv  ballenas.xls
datos/cache_modelo/: metadatos_cache.md
datos/embarcaciones/: embarcaciones.xslx  metadatos_embarcaciones.md
datos/produccion_pesquera/: metadatos_prod_pesquera.md  produccion_pesquera.csv  produccion_pesquera_original.xlsx
docs/: conclusiones.qmd  escenarios.qmd  index.html  index.qmd  index_original.html  introduccion.html  introduccion.qmd
(+54 files in other folders)
