[project]
name = "pruebas-ods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "quarto-cli>=1.9.37",
    "spicy>=0.16.0",
]
